Change background and add nav bar

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +10,25 @@
     </head>
     <body>
         <canvas class="background"></canvas>
+
+        <nav>
+            <div class="nav_logo">
+                <img src="swifty.png" alt="Swifty Assistant logo">
+                <a href="#">Swifty Assistant</h1>
+            </div>
+            <div class="onglets">
+                <div class="item">
+                    <img src="github-brands.svg" alt="GitHub repository">
+                    <a  href="dfgdf">GitHub</a>
+                </div>
+                <div class="item">
+                    <img src="paper-plane-solid.svg" alt="Send mail">
+                    <a href="gfd">Contact</a>
+                </div>
+            </div>
+            <div class="match_parent"></div>
+        </nav>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
         <script src="app.js"></script>
     </body>
