--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 <body>
     <canvas class="background"></canvas>
 
+    <div class="bg_loader">
+        <div class="loader">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
     <nav>
         <a id="logo" href="#" title="Home">Swifty</a>
 
@@ -30,7 +38,8 @@
             <img class="icon_swifty" src="swifty.png">
             <h1>Swifty Assistant</h1>
             <h2 id="h2">A simple, user-friendly, personal assistant based on an extension system</h2>
-            <h2 id="h3">Swifty is created to be useful to both beginners and computer experts! It works offline and does not
+            <h2 id="h3">Swifty is created to be useful to both beginners and computer experts! It works offline and does
+                not
                 collect any personal data! If you like Swifty Assistant and you find it useful, please feel free to
                 contribute to the project, thank you.</h2>
         </div>
