Updated text of download button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="match_parent"></div>
 
         <div>
-            <button id="btn_download" class="btn_download">Download v1.0.0-alpha3</button>
+            <button id="btn_download" class="btn_download">Download v1.0.0-alpha3 Linux</button>
             <button id="btn_github_project" class="btn_github_project">
                 <img src="github-brands.svg">
             </button>
