Updated loading view

--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
     <canvas class="background"></canvas>
 
     <div class="bg_loader">
-        <div class="loader">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+        <h1>Loading...</h1>
     </div>
 
     <nav>
