--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Raleway:wght@500&display=swap">
+    <link rel="icon" type="image/png" sizes="16x16" href="swifty.png">
 </head>
 
 <body>
