Bug correction for responsive design and update navBar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Loading...</h1>
     </div>
 
-    <nav>
+    <nav id="nav_bar">
         <a id="logo" href="#" title="Home">Swifty</a>
 
         <div class="onglets">
