--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     contribute to the project, thank you.</h2>
             </div>
 
-            <div class="max_parent"></div>
+            <div class="line"></div>
 
             <div class="content">
                 <button id="btn_download" class="btn_download">Download v1.0.0-alpha3 Linux</button>
