Update company name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <nav id="nav_bar">
-        <a id="logo" href="#" title="Home">Swifty</a>
+        <a id="logo" href="https://swiftapp-hub.github.io" title="Home">Swiftapp</a>
 
         <div class="onglets">
             <button id="btn_github">GitHub</button>
