Bug correction with redirection

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Swiftapp</title>
     <meta name="description" content="A simple and open source personal assistant">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Refresh" content="0; url=//swiftapp-hub.github.io" />
+    <meta http-equiv="Refresh" content="0; url=https://swiftapp-hub.github.io" />
 </head>
 
 <body>
